 plugins/slide: add special case for instant animations

In springmotion.cpp for the slide plugin, there are issues when
animations are disabled, namely a black screen flicker.

The flicker is caused by float under/overflow (div-by-0 -> infinity).

This commit fixes that by special-casing an infinite spring constant,
so that the animation immediately jumps to the anchor.

BUG: 472901


(cherry picked from commit 94b74cff960566d42813ecf4847637c2283a6fac)